--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <p>Herbert Bayer fue un diseñador de origen austriaco y fue estudiante y profesor de la Bauhaus donde se desctacó por su prolificidad. De Alemania emigró hacia Nueva York donde fue contratado por Walter Paepcke como consultor de diseño en Container Corporation of America.</p>
                     <p>Fue dentro del trabajo que Bayer realizó para esta empresa que en 1953 creo el "World Geo-Graphical Atlas". Este Atlas para Bayer significó crear una nueva narrativa gráfica para este tipo de contenido, para la cual realizó una extensa investigación de 5 años para recopilar la información que necesitaba para producir esta pieza. Es en esta obra donde se ve la influencia que tuvieron sus contemporáneos de la Bauhaus en su trabajo, utilizando diferentes elementos propios de esta escuela. El Atlas tuvo una edición única de 30.000 copias y a pesar de que tuvieron ofertar para ediciones comerciales, Paeckpe las rechazó.</p>
                     <p>Hoy vemos el trabajo de Herbert Bayer y este Atlas como parte de los antecedentes de los diseños de comunicación visual que conocemos y es reconocido como el Atlas más completo y rico en información a la fecha.</p>
-                    <p>A continuación se presentan una serie de imágenes del libro The World Geo-Graphical Atlas</p>
+                    <p>A continuación se presentan una serie de imágenes del libro The World Geo-Graphical Atlas.</p>
                 </div>
             </div>
             <div class="row">
